# WechatOfficialAccountAssistant

./: LICENSE  README.md
assistant_flow/: .dockerignore  Dockerfile  README.md  pyproject.toml
assistant_flow/knowledge/articles/: ai-agent-revolution.md  content-creation-ai-tools.md  prompt-engineering-guide.md
assistant_flow/src/assistant_flow/: main.py
assistant_flow/src/assistant_flow/crews/content_crew/: content_crew.py
assistant_flow/src/assistant_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
assistant_flow/src/assistant_flow/crews/publishing_crew/: publishing_crew.py
assistant_flow/src/assistant_flow/crews/publishing_crew/config/: agents.yaml  tasks.yaml
assistant_flow/src/assistant_flow/tools/: __init__.py  langchain_tools.py  llamaindex_tools.py
