[project]
name = "assistant_flow"
version = "0.1.0"
description = "assistant-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
kickoff = "assistant_flow.main:kickoff"
run_crew = "assistant_flow.main:kickoff"
plot = "assistant_flow.main:plot"
run_with_trigger = "assistant_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
