[project]
name = "assistant_flow"
version = "0.1.0"
description = "微信公众号文章发表助手 - WeChat Official Account Article Publishing Assistant"
authors = [{ name = "米奇", email = "921844591@qq.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14.6,<2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "duckduckgo-search>=7.0.0",
    "ddgs>=9.14.4",
    "requests>=2.31.0",
]

[project.scripts]
kickoff = "assistant_flow.main:kickoff"
run_crew = "assistant_flow.main:kickoff"
plot = "assistant_flow.main:plot"
run_with_trigger = "assistant_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
